# zavod

./: main.py  pyproject.toml  ruff.toml
